--- a/webPage/pages/abstract.html
+++ b/webPage/pages/abstract.html
@@ -15,6 +15,9 @@
 	<!-- Toast CSS -->
 	<link href="../vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.css" rel="stylesheet" type="text/css">
 
+	<!-- Morris Charts CSS -->
+    <link href="../vendors/bower_components/morris.js/morris.css" rel="stylesheet" type="text/css"/>
+
 	<!-- Custom CSS -->
 	<link href="dist/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -98,98 +101,10 @@
         <!-- Main Content -->
 		<div class="page-wrapper">
             <div class="container-fluid pt-25">
-				<!-- Row -->
-				<div class="row">
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-						<div class="panel panel-default card-view pa-0 bg-gradient">
-							<div class="panel-wrapper collapse in">
-								<div class="panel-body pa-0">
-									<div class="sm-data-box">
-										<div class="container-fluid">
-											<div class="row">
-												<div class="col-xs-6 text-center pl-0 pr-0 data-wrap-left">
-													<span class="txt-light block counter"><span class="counter-anim clock-runtime"></span></span>
-													<span class="weight-500 uppercase-font block font-13 txt-light">hours</span>
-												</div>
-												<div class="col-xs-6 text-center  pl-0 pr-0 data-wrap-right">
-													<i class="icon-clock  data-right-rep-icon txt-light"></i>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-						<div class="panel panel-default card-view pa-0 bg-gradient1">
-							<div class="panel-wrapper collapse in">
-								<div class="panel-body pa-0">
-									<div class="sm-data-box">
-										<div class="container-fluid">
-											<div class="row">
-												<div class="col-xs-6 text-center pl-0 pr-0 data-wrap-left">
-													<span class="txt-light block counter"><span class="counter-anim flow-counter"></span></span>
-													<span class="weight-500 uppercase-font block txt-light">flows</span>
-												</div>
-												<div class="col-xs-6 text-center  pl-0 pr-0 data-wrap-right">
-													<i class="icon-bubbles data-right-rep-icon txt-light"></i>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-						<div class="panel panel-default card-view pa-0 bg-gradient2">
-							<div class="panel-wrapper collapse in">
-								<div class="panel-body pa-0">
-									<div class="sm-data-box">
-										<div class="container-fluid">
-											<div class="row">
-												<div class="col-xs-6 text-center pl-0 pr-0 txt-light data-wrap-left">
-													<span class="block counter"><span class="counter-anim software-counter"></span></span>
-													<span class="weight-500 uppercase-font block">softwares</span>
-												</div>
-												<div class="col-xs-6 text-center  pl-0 pr-0 txt-light data-wrap-right">
-													<i class="icon-grid data-right-rep-icon"></i>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-						<div class="panel panel-default card-view pa-0 bg-gradient3">
-							<div class="panel-wrapper collapse in">
-								<div class="panel-body pa-0">
-									<div class="sm-data-box">
-										<div class="container-fluid">
-											<div class="row">
-												<div class="col-xs-6 text-center pl-0 pr-0 data-wrap-left">
-													<span class="txt-light block counter"><span class="counter-anim malware-counter"></span></span>
-													<span class="weight-500 uppercase-font block txt-light">malwares</span>
-												</div>
-												<div class="col-xs-6 text-center  pl-0 pr-0 pt-25  data-wrap-right">
-													<i class="icon-target data-right-rep-icon txt-light"></i>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Row -->
 
 				<!-- Row -->
 				<div class="row">
-					<div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<div class="panel panel-default card-view">
 							<div class="panel-heading">
 								<div class="pull-left">
@@ -204,185 +119,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-						<div class="panel panel-default card-view panel-refresh">
-							<div class="refresh-container">
-								<div class="la-anim-1"></div>
-							</div>
-							<div class="panel-heading">
-								<div class="pull-left">
-									<h6 class="panel-title txt-dark">Open Positions</h6>
-								</div>
-								<div class="pull-right">
-									<a href="#" class="pull-left inline-block refresh">
-										<i class="zmdi zmdi-replay"></i>
-									</a>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-							<div class="panel-wrapper collapse in">
-								<div class="panel-body">
-									<div id="e_chart_4" class="" style="height:330px;"></div>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 				<!-- /Row -->
 
-				<!-- Row -->
-				<div class="row">
-					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-						<div class="panel panel-default card-view">
-							<div class="panel-heading">
-								<div class="pull-left">
-									<h6 class="panel-title txt-dark">Key Metrics</h6>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-							<div class="panel-wrapper collapse in">
-								<div  class="panel-body">
-									<span class="font-12 head-font txt-dark">Employee Turnover<span class="pull-right">85%</span></span>
-									<div class="progress mt-10 mb-30">
-										<div class="progress-bar progress-bar-info" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%" role="progressbar"> <span class="sr-only">85% Complete (success)</span> </div>
-									</div>
-									<span class="font-12 head-font txt-dark">Speed to Hire (Days)<span class="pull-right">80%</span></span>
-									<div class="progress mt-10 mb-30">
-										<div class="progress-bar progress-bar-success" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%" role="progressbar"> <span class="sr-only">85% Complete (success)</span> </div>
-									</div>
-									<span class="font-12 head-font txt-dark">Promotion Rates<span class="pull-right">70%</span></span>
-									<div class="progress mt-10 mb-30">
-										<div class="progress-bar progress-bar-danger" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 70%" role="progressbar"> <span class="sr-only">85% Complete (success)</span> </div>
-									</div>
-									<span class="font-12 head-font txt-dark">Success Rate<span class="pull-right">45%</span></span>
-									<div class="progress mt-10 mb-30">
-										<div class="progress-bar progress-bar-inverse" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 45%" role="progressbar"> <span class="sr-only">85% Complete (success)</span> </div>
-									</div>
-									<span class="font-12 head-font txt-dark">Performance<span class="pull-right">80%</span></span>
-									<div class="progress mt-10 mb-30">
-										<div class="progress-bar progress-bar-success" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%" role="progressbar"> <span class="sr-only">80% Complete (success)</span> </div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-						<div class="panel panel-default card-view panel-refresh">
-							<div class="refresh-container">
-								<div class="la-anim-1"></div>
-							</div>
-							<div class="panel-heading">
-								<div class="pull-left">
-									<h6 class="panel-title txt-dark">Employee Churn </h6>
-								</div>
-								<div class="pull-right">
-									<a href="#" class="pull-left inline-block refresh">
-										<i class="zmdi zmdi-replay"></i>
-									</a>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-							<div class="panel-wrapper collapse in">
-								<div class="panel-body">
-									<div id="e_chart_2" class="" style="height:330px;"></div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-							<div class="panel panel-default card-view">
-							<div class="panel-heading">
-								<div class="pull-left">
-									<h6 class="panel-title txt-dark">Yellow Card Issued</h6>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-							<div class="panel-wrapper collapse in">
-								<div class="panel-body row pa-0">
-									<div class="table-wrap">
-										<div class="table-responsive">
-											<table class="table display product-overview border-none" id="employee_table">
-												<thead>
-													<tr>
-														<th>Employee ID</th>
-														<th>Name</th>
-														<th>Reason</th>
-														<th>Date</th>
-														<th>Status</th>
-														<th>Actions</th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td>#85457896</td>
-														<td>Anthony Davie</td>
-														<td>Cinnabar</td>
-														<td>Oct 25</td>
-														<td>
-															<span class="label label-success ">done</span>
-														</td>
-														<td><a href="javascript:void(0)" class="pr-10" data-toggle="tooltip" title="completed" ><i class="zmdi zmdi-check"></i></a> <a href="javascript:void(0)" class="text-inverse" title="Delete" data-toggle="tooltip"><i class="zmdi zmdi-delete"></i></a></td>
-													</tr>
-													<tr>
-														<td>#85457895</td>
-														<td>David Perry</td>
-														<td>Felix PSD</td>
-														<td>Oct 25</td>
-														<td>
-															<span class="label label-danger">pending</span>
-														</td>
-														<td><a href="javascript:void(0)" class="pr-10" data-toggle="tooltip" title="completed" ><i class="zmdi zmdi-check"></i></a> <a href="javascript:void(0)" class="text-inverse" title="Delete" data-toggle="tooltip"><i class="zmdi zmdi-delete"></i></a></td>
-													</tr>
-													<tr>
-														<td>#85457896</td>
-														<td>Anthony Davie</td>
-														<td>Cinnabar</td>
-														<td>Oct 25</td>
-														<td>
-															<span class="label label-success ">done</span>
-														</td>
-														<td><a href="javascript:void(0)" class="pr-10" data-toggle="tooltip" title="completed" ><i class="zmdi zmdi-check"></i></a> <a href="javascript:void(0)" class="text-inverse" title="Delete" data-toggle="tooltip"><i class="zmdi zmdi-delete"></i></a></td>
-													</tr>
-													<tr>
-														<td>#85457894</td>
-														<td>Davie</td>
-														<td>iphone</td>
-														<td>Oct 25</td>
-														<td>
-															<span class="label label-success ">done</span>
-														</td>
-														<td><a href="javascript:void(0)" class="pr-10" data-toggle="tooltip" title="completed" ><i class="zmdi zmdi-check"></i></a> <a href="javascript:void(0)" class="text-inverse" title="Delete" data-toggle="tooltip"><i class="zmdi zmdi-delete"></i></a></td>
-													</tr>
-													<tr>
-														<td>#85457896</td>
-														<td>Anthony</td>
-														<td>Cinnabar</td>
-														<td>Nov 25</td>
-														<td>
-															<span class="label label-success ">done</span>
-														</td>
-														<td><a href="javascript:void(0)" class="pr-10" data-toggle="tooltip" title="completed" ><i class="zmdi zmdi-check"></i></a> <a href="javascript:void(0)" class="text-inverse" title="Delete" data-toggle="tooltip"><i class="zmdi zmdi-delete"></i></a></td>
-													</tr>
-													<tr>
-														<td>#85457898</td>
-														<td>Anthony Davie</td>
-														<td>Doodle</td>
-														<td>Dec 25</td>
-														<td>
-															<span class="label label-success ">done</span>
-														</td>
-														<td><a href="javascript:void(0)" class="pr-10" data-toggle="tooltip" title="completed" ><i class="zmdi zmdi-check"></i></a> <a href="javascript:void(0)" class="text-inverse" title="Delete" data-toggle="tooltip"><i class="zmdi zmdi-delete"></i></a></td>
-													</tr>
-												</tbody>
-											</table>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Row -->
 			</div>
 
 			<!-- Footer -->
@@ -445,7 +184,7 @@
     <!-- Morris Charts JavaScript -->
     <script src="../vendors/bower_components/raphael/raphael.min.js"></script>
     <script src="../vendors/bower_components/morris.js/morris.min.js"></script>
-    <script src="dist/js/morris-data.js"></script>
+    <script src="dist/js/abstract.js"></script>
 </body>
 
 </html>
